# rust_stm32h7

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs
src/usart/: alloc_block.rs  block.rs  dma.rs  interup.rs  poll.rs
学习文档发/alloc/: 两者区别.md  使用第三方库.md  注册是什么意思.md  自己引入C函数.md
学习文档发/blockwrite/: block是阻塞不是让出cpu.md  其实embassy的usart已经默认用到中断了.md
学习文档发/loop过快导致释放后迅速获取锁/: loop过快.md
学习文档发/unwarp宏和blockwrite.md/: 介绍.md
学习文档发/执行器/: 在有任务正在运行时出现中断.md  执行器伪代码以及其如何调度.md  执行器是如何工作的呢.md
学习文档发/特征问题/: use_spin.md  特征必须引入才行.md  解引用.md
构建命令/: 1.md
