[package]
name = "embassy_proj1"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "usart-poll"
path = "./src/usart/poll.rs"

[[bin]]
name = "interrupt"
path = "./src/usart/interup.rs"

[[bin]]
name = "dma"
path = "./src/usart/dma.rs"


[[bin]]
name = "block"
path = "./src/usart/block.rs"

[[bin]]
name = "alloc_block"
path = "./src/usart/alloc_block.rs"

[dependencies]


linked_list_allocator = "0.10.5"
# 使用 crates.io 上的发布版本
embassy-stm32 = { version = "0.2.0", features = [
    "defmt", 
    "stm32h743zi",  # 根据您的实际芯片型号选择
    "time-driver-tim2", 
    "exti", 
    "memory-x", 
    "unstable-pac", 
    "chrono"
]}
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-embedded-hal = { version = "0.3.0" }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.7.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

# 其他依赖保持不变
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-nal-async = "0.8.0"
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
rand_core = "0.6.3"
critical-section = "1.1"
micromath = "2.0.0"
stm32-fmc = "0.3.0"
embedded-storage = "0.3.1"
static_cell = "2.1.0"
chrono = { version = "^0.4", default-features = false }
grounded = "0.2.0"

# 构建配置保持不变
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false